--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ APP_SECRET=dccde6593b77e3e6aedef569b8a90841
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
