--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,8 @@ security:
                 check_path: app_login
                 username_path: email
                 password_path: password
+            logout:
+                path: app_logout
 
 
 
