API PLATFORM PART2: Security chapter 36

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,7 @@ services:
         # implications!
         decoration_priority: -20
         arguments: ['@App\ApiPlatform\AutoGroupResourceMetadataFactory.inner']
+
+    App\Doctrine\CheeseListingSetOwnerListener:
+        tags:
+            - { name: doctrine.orm.entity_listener}
